Fixed scrollbar issue and more styling fixes

--- a/src/Pages/Resume/Resume.css
+++ b/src/Pages/Resume/Resume.css
@@ -98,6 +98,10 @@
     margin: 0 auto;
 }
 
+.alignCenter::-webkit-scrollbar {
+    display: none;
+}
+
 .sideBySide {
     padding-right: 5%;
     margin-left: 40px;
